Fixed legend key error, and problem with values in overlay box

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,15 @@
-.app.py.swp
-.ipynb_checkpoints/
-.swp
 EJ-workspace.code-workspace
 SDWA_data_prep/.ipynb_checkpoints/sdwis_data-checkpoint.ipynb
-SDWA_data_prep/reproducible/.get_data.py.swp
-SDWA_data_prep/reproducible/.ipynb_checkpoints/
-SDWA_data_prep/reproducible/.main.py.swo
-SDWA_data_prep/reproducible/.main.py.swp
-SDWA_data_prep/reproducible/.violations.py.swp
 SDWA_data_prep/reproducible/.vscode/
 SDWA_data_prep/reproducible/__pycache__/
 archive/
 data/Census/
-data/Created/SpatialAnalysis/.ipynb_checkpoints/
 data/Created/SpatialAnalysis/.vscode/
 data/TIGER/
 data/NJDEP
-regression/.ipynb_checkpoints/
-regression/.main.py.swp
 regression/__pycache__/
-spatial_analysis/.ipynb_checkpoints/
-web_app/data/.ipynb_checkpoints/
 web_app/data/working/
 tl_2016_us_uac10*
-    
+*.swp
+*.swo
+*.ipynb_checkpoints*
